--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "tfs-hackathon",
-  "version": "0.1.0",
+  "name": "micro-scale",
+  "description": "A Next.js template that uses Replicate to create a web tool that can upscale your images.",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,38 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.1",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@types/js-cookie": "^3.0.4",
-    "@upstash/ratelimit": "^0.4.4",
-    "@vercel/analytics": "^1.1.1",
-    "@vercel/blob": "^0.13.0",
-    "@vercel/kv": "^0.2.3",
-    "@vercel/postgres": "^0.5.0",
-    "appwrite": "^13.0.0",
+    "@t3-oss/env-core": "^0.9.2",
+    "cal-sans": "^1.0.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "framer-motion": "^10.16.4",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.284.0",
-    "nanoid": "^5.0.1",
-    "next": "13.5.4",
-    "next-themes": "^0.2.1",
+    "clsx": "^2.1.0",
+    "next": "14.1.3",
     "react": "^18",
-    "react-compare-slider": "^2.2.0",
-    "react-confetti": "^6.1.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
-    "replicate": "^0.20.0",
-    "server-only": "^0.0.1",
-    "swr": "^2.2.4",
-    "tailwind-merge": "^1.14.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
@@ -48,12 +27,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "encoding": "^0.1.13",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
