--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,12 @@
-DB_PASS=LxiWFR4NSGSt4xEK
+############################################################
+##################  SUPABASE  ##############################
+############################################################
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_KEY=
+
+
+############################################################
+##################  INTERNALS CONSTANTS  ###################
+############################################################
+DEFAULT_CREDITS_PER_USER=
