--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.358.0",
+    "nanoid": "^5.0.6",
     "next": "14.1.3",
     "react": "^18",
+    "react-compare-slider": "^3.0.1",
     "react-dom": "^18",
+    "replicate": "^0.29.0",
     "sonner": "^1.4.3",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -37,6 +41,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "server-only": "^0.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
