chore: Updated README.md
- Added LICENSE.md file - Updated .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,29 @@
-############################################################
-##################  SUPABASE  ##############################
-############################################################
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_KEY=
+## NOTE
+## Thoses variables will be checked on runtime, if they are not set, the application will throw an error.
+## src/env.mjs
 
 
-############################################################
-##################  INTERNALS CONSTANTS  ###################
-############################################################
+# Supabase configuration
+## Supabase URL
+NEXT_PUBLIC_SUPABASE_URL=""
+## Supabase anonymous key
+NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+## Supabase service key
+SUPABASE_SERVICE_KEY=""
+
+# Stripe configuration
+## Stripe publishable key
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
+## Stripe secret key
+STRIPE_SECRET_KEY=""
+## Stripe webhook secret
+STRIPE_WEBHOOK_SECRET=""
+
+# Replicate API key
+REPLICATE_API_KEY=""
+
+# Ngrok URL for local development
+NGROK_URL=''
+
+# Default credits per user
 DEFAULT_CREDITS_PER_USER=
