feat: :sparkles: Added Vercel Analytics
- Updated .env.example and env.mjs

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 ## Thoses variables will be checked on runtime, if they are not set, the application will throw an error.
 ## src/env.mjs
 
+# Vercel configuration
+SITE_URL=""
+
 
 # Supabase configuration
 ## Supabase URL
